# legal-qa-vn

./: .gitignore  GUIDE_DISTRIBUTED_INDEXING.md  SETUP.md  api_server.py  batch_index_remote.py  evaluate_accuary.py  fb.txt  filtered_agencies.csv  main.py  migrate_add_linh_vuc.py  package-lock.json  prompt.txt  pyproject.toml  test_dedup.py  test_extract_info_regex.py  test_nodes.py  test_workflow.py
bm_25_wand/: build_model.py  build_tokenize.py  engine.py  indexing.py  load_model.py  schemas.py  utils.py  wand_algorithm.py
bm_25_wand/evaluation/: evaluate.py
configs/: indexing_config.yaml  rag_config.yaml  rerank_config.yaml  retrieval_config.yaml  search_config.yaml
configs/prompts/: answer_prompt.txt  legal_ref_extraction.txt  rag_answer_prompt.txt  system_prompt.txt
docs/csv/: co_quan_filtered.csv
docs/guide/: GUIDE_DISTRIBUTED_INDEXING.md  RUN.md
evaluate/: evaluate.py  evaluate1.py  evaluate_1_4.json  evalute_3_1.json  ground_truth.json  ground_truth1.json  loc_1_4_100.jsonl  loc_3_1_100.jsonl  predict_benchmark.py
evaluate/log_error/: log_error_1_4.json  log_error_3_1.json
evaluate/nhan-xet/: cac_van_ban_index_loi.md  chi_tiet_1_4.md  chi_tiet_3_1.md  missing_van_ban_sai.md  so_sanh_sai_vs_index_loi.md  tong_ket_nhan_xet.md  van_ban_khong_duoc_truy_van.md
evaluate/predict_tot_nhat/: rag_predict_result_1_4.json  rag_predict_result_3_1.json  report.txt
frontend/: api-host-nlp-backend.ipynb  index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
migrations/: add_trang_thai_chroma.py
outputs/: bm25_full.txt  bm25_full_no_stopword.txt  bm25_wand.txt  bm25_wand_no_stopword.txt
phong/: __init__.py  retriever.py  tokenize_corpus.py  utils.py
phong/dense/: index_qrels_to_chroma.py
phong/evaluate/: eval_dense.py  eval_inverted.py  eval_tfidf.py  evaluate.py
phong/inverted_index/: inverted_index.py
phong/tfidf/: build_tfidf.py  main.py
scripts/: host.py  host1.py  index_parquet.py  test_chunking.py  test_parser_chunker.py
src/: schemas.py
src/agent/: graph.py  llm_planner.py  llms.py  nodes.py  prompts.py  runner.py  schemas.py  state.py  test_tool.py  tools.py
src/api/: __init__.py  config.py  remote_client.py
src/core/: __init__.py  config.py  enums.py  models.py
src/generate/: __init__.py  service.py
src/indexing/: config.py  indexing.py
src/rag/: __init__.py  config.py  markdown_formatter.py  pipeline.py  service.py
src/retrieval/: retrieve.py
src/search/: __init__.py  config.py  pipeline.py  reranker.py  search.py
system/: enums.py  indexing_100file.py  replace_file_service.py  schemas.py
system/database/: db.py  (+2 more)
(+81 files in other folders)
