[project]
name = "nlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber",
    "pymupdf",
    "pypdf",
    "python-docx",
    "docling",
    "langchain-text-splitters>=0.3.9",
    "onnxruntime>=1.14.0",
    "onnxruntime-gpu>=1.24.2",
    "sentencepiece",
    "safetensors",
    "numpy",
    "pydantic>=2.10.0",
    "chromadb>=1.5.2",
    "any2md>=0.6.0",
    "pypandoc>=1.16.2",
    "tqdm>=4.67.3",
    "pywin32>=305",
    "langchain-core>=1.2.19",
    "doc2docx>=0.2.4",
    "pyyaml>=6.0",
    "transformers>=4.45,<5",
    "torch>=2.7,<2.10",
    "sentence-transformers>=5.4.1",
    "langchain>=1.2.17",
    "langgraph>=1.1.10",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.2",
    "huggingface-hub>=0.36.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "sqlalchemy>=2.0.49",
]

[tool.setuptools.packages.find]
where = ["."]
